<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:id="@+id/image_detail_recipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_detail_name_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/name_food"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tv_detail_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/author"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFC403"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="4/5" />

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_liat_di_website"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_outside"
                android:textSize="12sp"
                app:iconSize="20dp"
                app:strokeColor="@color/m3_text_button_foreground_color_selector"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Share" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_detail_title_ingridients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/detail_title_ingridients" />

        <TextView
            android:id="@+id/tv_detail_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/detail_ingredients" />

        <TextView
            android:id="@+id/tv_detail_title_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/detail_title_method"
            />

        <TextView
            android:id="@+id/tv_detail_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/detail_method" />

    </LinearLayout>
</ScrollView>